--- a/Sparkt.WebApp/Views/Home/Index.cshtml
+++ b/Sparkt.WebApp/Views/Home/Index.cshtml
@@ -60,7 +60,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="culture-wrapp">
+            <div class="culture-wrapp fadIn-wrapp">
                 <div class="swiper-container culture-slider">
                     <div class="swiper-wrapper">
 
@@ -133,8 +133,8 @@
                         </div>
 
                     </div>
-                    <div class="swiper-button-prev swiper-btn"></div>
-                    <div class="swiper-button-next"></div>
+                    <div class="swiper-button-prev swiper-btn"><i class="fas fa-chevron-down"></i></div>
+                    <div class="swiper-button-next"><i class="fas fa-chevron-up"></i></div>
 
                 </div>
             </div>
@@ -148,8 +148,8 @@
             <div class="head-title-content"> </div>
         </div>
         <div class="container">
-            <div class="offering-wrapp">
-                <span class="services-lable">Services</span> <span class="core-lable">Core</span>
+            <div class="offering-wrapp fadIn-wrapp">
+                <span class="services-lable">Services</span> <span class="core-lable">Core Value</span>
                 <div class="offering-container">
                     <div class="ring-wrapp ring-8 bottom-center-angle  right-angle">
                         <div class="ring-content">
@@ -271,6 +271,135 @@
                     </div>
                 </div>
             </div>
+            <div class="offering-wrapp-mobile">
+                <div class="offering-blk">
+                    <h5>Services</h5>
+
+                    <ul class="collapsible" data-collapsible="accordion">
+                        <li>
+                            <div class="collapsible-header"><span class="icons communication"> </span>Communication <i class="fas fa-chevron-down"></i></div>
+                            <div class="collapsible-body">
+                                <ul class="offfering-details communication">
+                                    <li>Campaigns</li>
+                                    <li>Creative Strategy</li>
+                                    <li>Social & Community Management</li>
+                                    <li>Communication Development</li>
+                                    <li>Corporate Communication</li>
+                                    <li>Employee Engagement</li>
+                                    <li>Packaging</li>
+                                </ul>
+
+                            </div>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><span class="icons content"> </span>Content <i class="fas fa-chevron-down"></i></div>
+                            <div class="collapsible-body">
+                                <ul class="offfering-details content">
+                                    <li>Content Strategy</li>
+                                    <li>Concept Development</li>
+                                    <li>Live Action & Production</li>
+                                    <li>Photo & Art Production</li>
+                                    <li>Syndication & Publishing</li>
+                                    <li>Branded Content</li>
+                                    <li>Long-form Editorial</li>
+                                    <li>Motion Design</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><span class="icons media"></span>Media <i class="fas fa-chevron-down"></i></div>
+                            <div class="collapsible-body">
+                                <ul class="offfering-details media">
+                                    <li>Channel & Media Planning</li>
+                                    <li>Measurement & Optimisation</li>
+                                    <li>Unified Analytics</li>
+                                    <li>Marketing Automation</li>
+                                    <li>Customer Life Cycle Management</li>
+                                    <li>Loyalty</li>
+                                    <li>Search & Local Discovery</li>
+                                    <li>Influencer Management</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><span class="icons experiences"></span>Experiences <i class="fas fa-chevron-down"></i></div>
+                            <div class="collapsible-body">
+                                <ul class="offfering-details experiences">
+                                    <li>Websites & Microsites</li>
+                                    <li>Mobile Apps</li>
+                                    <li>Intranet</li>
+                                    <li>Conversational & Cognitive Interfaces</li>
+                                    <li>Interaction Design</li>
+                                    <li>Experiential Environments (AR/VR/MR)</li>
+                                    <li>Retail Environments</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><span class="icons design"></span>Service Design <i class="fas fa-chevron-down"></i></div>
+                            <div class="collapsible-body">
+                                <ul class="offfering-details design">
+                                    <li>Consumer Interaction Design</li>
+                                    <li>Blueprinting & Storyboarding</li>
+                                    <li>Business Process Design</li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+
+                </div>
+
+                <div class="offering-blk">
+                    <h5>Core</h5>
+
+                    <ul class="collapsible" data-collapsible="accordion">
+                        <li>
+                            <div class="collapsible-header"><span class="icons consulting"> </span>Consulting <i class="fas fa-chevron-down"></i></div>
+                            <div class="collapsible-body">
+                                <ul class="offfering-details consulting">
+                                    <li>Brand Strategy & Positioning</li>
+                                    <li>Brand Identity & Design</li>
+                                    <li>Integrated Marketing Strategy</li>
+                                    <li>Consumer Experience Strategy</li>
+                                    <li>Technology & Digital Transformation</li>
+                                    <li>Business Innovation  & Enablement</li>
+                                    <li>Future-casting</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><span class="icons marketing"> </span>Marketing Sciences <i class="fas fa-chevron-down"></i></div>
+                            <div class="collapsible-body">
+                                <ul class="offfering-details marketing">
+                                    <li>Data Strategy</li>
+                                    <li>Brand & Business analytics</li>
+                                    <li>Data Mining & Modeling</li>
+                                    <li>Data Visualisation & Insights</li>
+                                    <li>Customer Data Management</li>
+                                    <li>Market Segmentation</li>
+                                    <li>Machine Learning & AI</li>
+                                    <li>Experience Evaulation</li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="collapsible-header"><span class="icons technology"></span>Technology <i class="fas fa-chevron-down"></i></div>
+                            <div class="collapsible-body">
+                                <ul class="offfering-details technology">
+                                    <li>Platform Design & Development</li>
+                                    <li>Software Development</li>
+                                    <li>Data Engineering</li>
+                                    <li>Data & Sensor Design</li>
+                                    <li>IOT</li>
+                                    <li>Capabilities assessment & Roadmapping</li>
+                                </ul>
+                            </div>
+                        </li>
+
+                    </ul>
+
+                </div>
+            </div>
         </div>
     </div>
     <div class="section blue" id="squad">
@@ -283,7 +412,7 @@
             </div>
         </div>
         <div class="container">
-            <div class="squad-wrapp">
+            <div class="squad-wrapp fadIn-wrapp">
                 <ul>
                     <li>
                         <figure>
@@ -458,6 +587,15 @@
                     </li>
                     <li>
                         <figure>
+                            <span class="profile-img  down-art"> <img src="~/Content/images/squad/guru.png" alt=""> </span>
+                            <figcaption>
+                                <h5 class="ellipsify">Director Data Consultant</h5>
+                                <h4 class="ellipsify"><span>Guru</span></h4>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li>
+                        <figure>
                             <span class="profile-img "> <img src="~/Content/images/squad/vinod-jadhav.png" alt="Vinod Anant Jadhav"> </span>
                             <figcaption>
                                 <h5 class="ellipsify">UI Developer</h5>
@@ -580,7 +718,7 @@
         </div>
         <div class="container">
 
-            <div class="accolades-wrapp">
+            <div class="accolades-wrapp fadIn-wrapp">
 
                 <div class="swiper-container accolades-slider">
                     <div class="swiper-wrapper">
@@ -619,7 +757,7 @@
         </div>
         <div class="container">
 
-            <div class="clients-wrapp">
+            <div class="clients-wrapp fadIn-wrapp">
                 <div class="content-title">
                     <h3>THOSE WHO BELIEVE IN US</h3>
                 </div>
@@ -639,7 +777,9 @@
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/piramalRealty-logo.png" alt="Piramal Realty" /></a>
                     </li>
-
+                    <li>
+                        <a style="cursor:default"><img src="~/Content/images/clients/piramal-foundation.png" alt="Piramal Foundation" /></a> 
+                    </li>
                     <li>
                         <a href="@Url.Action("PiramalCapital","work")"><img src="~/Content/images/clients/piramalCapital-logo.png" alt="Piramal Capital" /></a>
                     </li>
@@ -649,7 +789,8 @@
                     <li>
                         <a href="@Url.Action("UCypher","work")"><img src="~/Content/images/clients/uCypher-logo.png" alt="U Cypher" /></a>
                     </li>
-
+                    <li> <a tyle="cursor:default"><img src="~/Content/images/clients/u-mumba.png" alt="u-mumba" /></a> </li>
+                    @*<li> <a tyle="cursor:default"><img src="~/Content/images/clients/u-dream.png" alt="u-dream" /></a> </li>*@
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/pro-kabaddi.png" alt="Pro Kabaddi" /></a>
                     </li>
@@ -657,29 +798,26 @@
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/editage.png" alt="editage" /></a>
                     </li>
-
+                    <li>
+                        <a href="@Url.Action("OnePlus","work")"><img src="~/Content/images/clients/one-plus-logo.png" alt="One Plus" /></a>
+                    </li>
+                    <li> 
+                    <a tyle="cursor:default"><img src="~/Content/images/clients/pedder.png" alt="Pedder" /></a> 
+                    </li>
                     <li>
                         <a href="@Url.Action("brickex","work")"><img src="~/Content/images/clients/brickex-logo.png" alt="Brickex" /></a>
                     </li>
 
                     <li>
                         <a href="@Url.Action("IndiaRF","work")"><img src="~/Content/images/clients/rf-india-logo.png" alt="RF India" /></a>
-                    </li>
-                    <li>
-                        <a href="@Url.Action("OnePlus","work")"><img src="~/Content/images/clients/one-plus-logo.png" alt="One Plus" /></a>
-                    </li>
+                    </li>                   
 
-                    <!--<li>
-                                    <a href="work-mGage.php"><img src="images/clients/m-gage-logo.png" alt="mGage"/></a>
-                                </li>
-                                <li>
-                                    <a style="cursor:default"><img src="images/clients/times-network-logo.png" alt="Times Network"/></a>
-                                </li>-->
-                    <li>
+                    <li> <a style="cursor:default"><img src="~/Content/images/clients/evolis.png" alt="Evolis" /></a> </li>
+                    @*<li>
                         <a href="@Url.Action("bql","work")"><img src="~/Content/images/clients/indo-count-logo.png" alt="Boutique Living" /></a>
-                    </li>
+                    </li>*@
                     <li>
-                        <a style="cursor:default"><img src="~/Content/images/clients/lkp-logo.png" alt="LKP Finance Ltd" /></a>
+                        <a style="cursor:default"><img src="~/Content/images/clients/lkp-logo.png" alt="LKP" /></a>
                     </li>
                     <li>
                         <a style="cursor:default"><img src="~/Content/images/clients/your-brand-here.png" alt="Your Brand is here" /></a>
@@ -689,7 +827,7 @@
             </div>
         </div>
     </div>
-    <div class="section v-top blue-base-bg" id="work">
+    <div class="section v-top " id="work">
         <div class="section-title">
             <label>Work</label>
             <span></span>
@@ -717,6 +855,12 @@
                         </li>
                         <li>
                             <span>Content</span>
+                        </li>
+                        <li>
+                            <span>Marketing Sciences</span>
+                        </li>
+                        <li>
+                            <span>Media</span>
                         </li>
                     </ul>
                     <div class="resp-tabs-container">
@@ -1038,6 +1182,10 @@
                                 </li>
                             </ul>
                         </div>
+                         <div class="resp-tab-content" id="Marketing-Sciences">
+                             </div>
+                        <div class="resp-tab-content" id="Work-Media">
+                        </div>
                     </div>
                 </div>
             </div>
@@ -1050,17 +1198,9 @@
             <div class="clear"></div>
         </div>
         <div class="container">
-            <div class="showreel-wrapp ">
+            <div class="showreel-wrapp fadIn-wrapp">
                 <div class="swiper-container showreel-videos">
                     <div class="swiper-wrapper">
-                        <div class="swiper-slide">
-                            <div class="video-wrapp fadeRight" data-t-show="2">
-                                <img src="~/Content/images/video-size.png" alt="Video-Size">
-                                <video poster="~/Content/images/story-of-sparkt.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
-                                    <source src="https://youtu.be/Fq3yy7Dar24" type="video/youtube" />
-                                </video>
-                            </div>
-                        </div>
                         <div class="swiper-slide">
                             <img src="~/Content/images/video-size.png" alt="Video-Size">
 
@@ -1070,6 +1210,14 @@
                                 </video>
                             </div>
                         </div>
+                        <div class="swiper-slide">
+                            <div class="video-wrapp fadeRight" data-t-show="2">
+                                <img src="~/Content/images/video-size.png" alt="Video-Size">
+                                <video poster="~/Content/images/story-of-sparkt.jpg" style="max-width: 100%; " preload="none" controls playsinline webkit-playsinline>
+                                    <source src="https://youtu.be/Fq3yy7Dar24" type="video/youtube" />
+                                </video>
+                            </div>
+                        </div>                        
                     </div>
 
                     <div class="swiper-pagination"></div>
@@ -1078,7 +1226,7 @@
             </div>
         </div>
     </div>
-    <div class="section blue" id="sparktlive">
+    <div class="section blue-base-bg" id="sparktlive">
         <div class="head-title floated ">
             <i class="title-icon"><img src="~/Content/images/title-icon.png" alt=""></i>
             <h2>Sparkt Live</h2>
@@ -1088,10 +1236,10 @@
             </div>
         </div>
         <div class="container">
-            <div class="SparkMidd">
+            <div class="SparkMidd fadIn-wrapp">
 
                 <!-- Place <div> tag where you want the feed to appear -->
-                <div id="curator-feed"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Sparkt</a></div>
+                <div id="curator-feed"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag"></a></div>
                 <!-- The Javascript can be moved to the end of the html page before the </body> tag -->
                 <script type="text/javascript">
 /* curator-feed */
@@ -1119,7 +1267,7 @@ e = d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
             </div>
         </div>
         <div class="container">
-            <div class="contact-wrapp">
+            <div class="contact-wrapp fadIn-wrapp">
                 <ul id="contact-tab" class="tabs">
                     <li class="tab">
                         <a class="active" href="#getintouch"><span>Get in Touch</span> <i class="fa fa-handshake"></i></a>
