--- a/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_WorkMenu.cshtml
@@ -1,14 +1,14 @@
 ﻿
 <div class="work-navigation" id="work-navigation">
     <div class="client-works">
-        <ul id="mahindra">
+        <ul id="mahindra" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("MahindraTah","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/tah-thum.jpg" alt="" /> <span>Kar Bachat Yojana</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("MahindraMMF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-thum.jpg" alt="" /> <span>MMF Website</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("MahindraNfoLaunches","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mmf-info-thum.jpg" alt="" /> <span>MMF NFO Launches</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="4"><a href="@Url.Action("MahindraBadhatYojana","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/badhat-yojana-thum.jpg" alt="" /> <span>MMF BADHAT YOJANA</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="5"><a href="@Url.Action("MahindraUnnati","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/mahindra-unnati-thum.jpg" alt="" /> <span>UNNATI EMERGING BUSINESS YOJANA</span> </a> </li>
         </ul>
-        <ul id="starplus">
+        <ul id="starplus" class="horizontalScroll" >
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("NayiSoch","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nayosoch-thum.jpg" alt="" /> <span>Nayi Soch</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("Ted","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ted-thum.jpg" alt="" /> <span>TED TALKS INDIA</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("NachBaliye8","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/nach-baliye-8-thum.jpg" alt="" /> <span>Nach Baliye 8</span> </a> </li>
@@ -25,43 +25,43 @@
               <li class="fadeRight t-animated" data-t-show="11"><a href="kullfi.php" class="hvr-grow-shadow"><img src="images/thums/kullfi-thum.jpg" alt=""/> <span>Kullfi</span> </a> </li>
               <li class="fadeRight t-animated" data-t-show="12"><a href="hsubh.php" class="hvr-grow-shadow"><img src="images/thums/hsubh-thum.jpg" alt=""/> <span>HAR SHAAKH PE ULLU BAITHAA HAI</span> </a> </li>	-->
         </ul>
-        <ul id="star">
+        <ul id="star" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("Swp","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/swp-thum.jpg" alt="" /> <span>Star Writers Program</span> </a> </li>
         </ul>
-        <ul id="oneplus">
+        <ul id="oneplus" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("OnePlus","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/oneplus-thum.jpg" alt="" /> <span>One Plus</span> </a> </li>
         </ul>
-        <ul id="piramal">
+        <ul id="piramal" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("PiramalCapital","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/piramalcapital-thum.jpg" alt="" /> <span>Piramal Capital</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("Phfl","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/phfl-thum.jpg" alt="" /> <span>Piramal Housing</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("brickex","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/brickex-thum.jpg" alt="" /> <span>Brickex</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("IndiaRF","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/india-rf-thum.jpg" alt="" /> <span>India RF</span> </a> </li>
         </ul>
-        <ul id="usports">
+        <ul id="usports" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("USports","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/usports-thum.jpg" alt="" /> <span>USports</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="2"><a href="@Url.Action("UCypher","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/ucypher-thum.jpg" alt="" /> <span>UCypher</span> </a> </li>
             <li class="fadeRight t-animated" data-t-show="3"><a href="@Url.Action("UCypherInstafight","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/u-cypher-insta-fight-thum.jpg" alt="" /> <span>UCypher - Insta Fight</span> </a> </li>
         </ul>
-        <ul id="boutique">
+        <ul id="boutique" class="horizontalScroll">
             <li class="fadeRight t-animated" data-t-show="1"><a href="@Url.Action("bql","work")" class="hvr-grow-shadow"><img src="~/Content/work/images/thums/boutique-thum.jpg" alt="" /> <span>Boutique Living</span> </a> </li>
-        </ul>
-        <!-- <ul id="mgage">
+        </ul>        
+        @*<ul id="mgage" class="horizontalScroll">
            <li class="fadeRight t-animated" data-t-show="1"><a href="m-gage.php" class="hvr-grow-shadow"><img src="images/thums/mGage-thum.jpg" alt=""/> <span>mGage</span> </a> </li>
-         </ul>-->
-        <!--<ul id="times-network">
+         </ul>
+        <ul id="times-network" class="horizontalScroll">
           <li class="fadeRight t-animated" data-t-show="1"><a href="#" class="hvr-grow-shadow"><img src="images/thums/nach-baliye-8-thum.jpg" alt=""/> <span>Times Network</span> </a> </li>
-        </ul>-->
+        </ul>*@
     </div>
     <div class="clear"></div>
-    <ul class="work-with-clients">
+    <ul class="work-with-clients horizontalScroll">
         <li class="mahindra"><a href="" data-related="mahindra" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/mahindra.png" alt="" /></a> </li>
         <li class="star-plus"><a href="" data-related="starplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/starplus.png" alt="" /></a> </li>
         <li class="star"><a href="" data-related="star" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/star.png" alt="" /></a> </li>
         <li class="one-plus"><a href="#" data-related="oneplus" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/oneplus.png" alt="" /></a> </li>
         <li class="piramal"><a href="#" data-related="piramal" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/piramal.png" alt="" /></a> </li>
         <li class="usports"><a href="#" data-related="usports" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/usports.png" alt="" /></a> </li>
-        <li class="bql"><a href="#" data-related="boutique" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/boutique.png" alt="" /></a> </li>
-        <!-- <li class="mgage" ><a href="#" data-related="mgage" class="hvr-rectangle-out"><img src="images/clients/mgage.png" alt=""/></a> </li>-->
-        <!-- <li><a href="#" data-related="times-network" class="hvr-rectangle-out"><img src="images/clients/times-network.png" alt=""/></a> </li>-->
+        <li class="bql"><a href="#" data-related="boutique" class="hvr-rectangle-out"><img src="~/Content/work/images/clients/boutique.png" alt="" /></a> </li>      
+        
+        
     </ul>
 </div>
