--- a/Sparkt.WebApp/Content/work/css/style.css
+++ b/Sparkt.WebApp/Content/work/css/style.css
@@ -120,7 +120,7 @@ filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#d92487', endC
 }
 .main-menu {
 	right: 2%;
-	top: 48%;
+	top: 55%;
 	transform: translateY(-50%) translateX(140%);
 	-webkit-transform: translateY(-50%) translateX(140%);
 	z-index: 998;
@@ -455,7 +455,7 @@ filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#d92487', endC
 	overflow-x: auto;
 	overflow-y: hidden
 }
-.work-navigation .work-with-clients>li {
+.work-navigation .work-with-clients li {
 	height: 100%;
 	padding: 0;
 	width: 14.29%;
@@ -465,10 +465,10 @@ filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#d92487', endC
 	transition: background ease .3s;
 	opacity: 1
 }
-.work-navigation .work-with-clients>li:first-child {
+.work-navigation .work-with-clients li:first-child {
 	margin: 0
 }
-.work-navigation .work-with-clients>li>a {
+.work-navigation .work-with-clients li a {
 	width: 100%;
 	height: 100%;
 	padding: 16px;
@@ -481,10 +481,10 @@ filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#d92487', endC
 	opacity: .6;
 	transition: opacity ease .3s
 }
-.work-navigation .work-with-clients>li>a.hvr-rectangle-out {
+.work-navigation .work-with-clients li a.hvr-rectangle-out {
 	background: #22256b
 }
-.work-navigation .work-with-clients>li>a.hvr-rectangle-out:before {
+.work-navigation .work-with-clients li a.hvr-rectangle-out:before {
 	background: rgba(255,26,0,1);
 	background: -moz-linear-gradient(-45deg, rgba(255,26,0,1) 0, rgba(217,36,135,1) 100%);
 	background: -webkit-gradient(left top, right bottom, color-stop(0, rgba(255,26,0,1)), color-stop(100%, rgba(217,36,135,1)));
@@ -494,7 +494,7 @@ filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#d92487', endC
 	background: linear-gradient(135deg, rgba(255,26,0,1) 0, rgba(217,36,135,1) 100%);
 filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1a00', endColorstr='#d92487', GradientType=1 )
 }
-.work-navigation .work-with-clients>li.active>a.hvr-rectangle-out:before {
+.work-navigation .work-with-clients li.active a.hvr-rectangle-out:before {
 	background: rgba(217,36,135,1);
 	background: -moz-linear-gradient(left, rgba(217,36,135,1) 0, rgba(255,26,0,1) 100%);
 	background: -webkit-gradient(left top, right top, color-stop(0, rgba(217,36,135,1)), color-stop(100%, rgba(255,26,0,1)));
@@ -504,14 +504,14 @@ filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1a00', endC
 	background: linear-gradient(to right, rgba(217,36,135,1) 0, rgba(255,26,0,1) 100%);
 filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#d92487', endColorstr='#ff1a00', GradientType=1 )
 }
-.work-navigation .work-with-clients>li.active, .work-navigation .work-with-clients>li.active a, .work-navigation .work-with-clients>li.highlighted a {
+.work-navigation .work-with-clients li.active, .work-navigation .work-with-clients li.active a, .work-navigation .work-with-clients li.highlighted a {
 filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1a00', endColorstr='#d92487', GradientType=1 )
 }
-.work-navigation .work-with-clients>li>a.hvr-rectangle-out:active:before, .work-navigation .work-with-clients>li>a.hvr-rectangle-out:focus:before {
+.work-navigation .work-with-clients li a.hvr-rectangle-out:active:before, .work-navigation .work-with-clients li a.hvr-rectangle-out:focus:before {
 	transform: none;
 	-webkit-transform: none
 }
-.work-navigation .work-with-clients>li>a img {
+.work-navigation .work-with-clients li a img {
 	max-height: 100%;
 	margin: 0 auto;
 	max-width: 100%;
@@ -520,16 +520,16 @@ filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1a00', endC
 .slick-dots li, .slick-dots li button {
 	transition: all ease .4s
 }
-.work-navigation .work-with-clients>li:hover {
+.work-navigation .work-with-clients li:hover {
 	background-color: #22256b
 }
-.work-navigation .work-with-clients>li:hover a {
+.work-navigation .work-with-clients li:hover a {
 	opacity: 1
 }
-.work-navigation .work-with-clients>li:hover a img {
+.work-navigation .work-with-clients li:hover a img {
 	transform: scale(1.1)
 }
-.work-navigation .work-with-clients>li.active {
+.work-navigation .work-with-clients li.active {
 	background: rgba(255,26,0,1);
 	background: -moz-linear-gradient(-45deg, rgba(255,26,0,1) 0, rgba(217,36,135,1) 100%);
 	background: -webkit-gradient(left top, right bottom, color-stop(0, rgba(255,26,0,1)), color-stop(100%, rgba(217,36,135,1)));
@@ -538,7 +538,7 @@ filter:progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff1a00', endC
 	background: -ms-linear-gradient(-45deg, rgba(255,26,0,1) 0, rgba(217,36,135,1) 100%);
 	background: linear-gradient(135deg, rgba(255,26,0,1) 0, rgba(217,36,135,1) 100%)
 }
-.work-navigation .work-with-clients>li.active a, .work-navigation .work-with-clients>li.highlighted a {
+.work-navigation .work-with-clients li.active a, .work-navigation .work-with-clients li.highlighted a {
 	opacity: 1;
 	background: rgba(255,26,0,1);
 	background: -moz-linear-gradient(-45deg, rgba(255,26,0,1) 0, rgba(217,36,135,1) 100%);
@@ -3080,14 +3080,15 @@ transform: translateX(0);
 	line-height: 57px;
 	padding: 3px 12px
 }
-.work-navigation .client-works, .work-navigation .work-with-clients {
-	height: 85px
-}
+.work-navigation .client-works, .work-navigation .work-with-clients, .work-navigation .work-with-clients li {
+        height: 85px
+    }
+
 .work-navigation .client-works li a span {
 	font-size: 11px;
 	line-height: 14px
 }
-.work-navigation .work-with-clients>li>a {
+.work-navigation .work-with-clients li a {
 	padding: 8px 12px
 }
 .work-navigation .client-works li {
@@ -3285,7 +3286,7 @@ transform: translateX(0);
 	font-size: 18px
 }
 .main-menu ul li {
-	margin: 2rem 0;
+	margin: 1.6rem 0;
 	min-width: 125px
 }
 .main-menu {
