--- a/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
+++ b/Sparkt.WebApp/Views/Shared/_LayoutWork.cshtml
@@ -36,6 +36,7 @@
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/bundle.css" />
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/plugins/lightgallery/css/lightgallery.css" />
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/plugins/lightgallery/css/lg-transitions.min.css" />
+    <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/plugins/malihu-custom-scrollbar/css/jquery.mCustomScrollbar.css" />
     <link type="text/css" rel="stylesheet" media="screen,projection" href="~/Content/work/css/style.css" />
 </head>
 <body>
@@ -47,7 +48,7 @@
             <div class="line-menu half end"></div>  
         </div>
         <div class="main-menu">
-            <ul>
+            <ul class="scroll-content">
                 <li><a href="@Url.Action("Index","Home")"><span>Home</span></a> </li>
                 <li><a href="@Url.Action("Index", "Home")?section=We"><span>We</span></a> </li>
                 <li><a href="@Url.Action("Index", "Home")?section=clients"><span>Clients</span></a> </li>
@@ -199,6 +200,7 @@
     @RenderSection("scripts", required: false)
     <!--  Scripts-->
     @*<script type="text/javascript" src="~/Content/work/js/jquery-3.1.1.min.js"></script>*@
+    <script type="text/javascript" src="~/Content/plugins/malihu-custom-scrollbar/js/jquery.mCustomScrollbar.concat.min.js"></script>
     <script type="text/javascript" src="~/Content/work/plugins/mediaelementplayer/js/mediaelement-and-player.min.js"></script>
     <script type="text/javascript" src="~/Content/work/plugins/slick/js/slick.min.js"></script>
     <script type="text/javascript" src="~/Content/work/plugins/scrollmagic/js/lib/greensock/TweenMax.min.js"></script>
